--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,9 @@
 :root {
-  --main-color: #f54254;
-  --background: #1d1d1e;
-  --secondary: #262626;
+  --main-color: #96CAD2;
+  --background: #D296CA;
+  --secondary: #96D2BC;
   --link: #f54254;
-  --text-color: #fff;
+  --text-color: #0C0C0C;
   --secondary-text-color: #dcdcdc;
 }
 
